samples/_failures_safe/1761329679_5969f8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1a268114.c: In function ‘tokenize’:
./samples/SAFE/__tmp_1a268114.c:167:9: error: expected expression at end of input
  167 |         if (success)
      |         ^~
./samples/SAFE/__tmp_1a268114.c:167:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_1a268114.c:167:9: error: expected declaration or statement at end of input
